--- a/.github/workflows/CIcd.yml
+++ b/.github/workflows/CIcd.yml
@@ -1,9 +1,26 @@
 name: Docker Compose Actions Workflow
-on: push
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
 jobs:
-  test:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Build the stack
-        run: docker-compose up -d
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Start Docker Compose stack
+        run: |
+          docker-compose up -d
+
+      - name: Verify services are running
+        run: |
+          docker ps
