--- a/.github/workflows/CIcd.yml
+++ b/.github/workflows/CIcd.yml
@@ -1,4 +1,5 @@
-name: Docker Compose Actions Workflow
+name: Deploy Docker Compose Stack on EC2
+
 on:
   push:
     branches:
@@ -11,16 +12,40 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      # Step 1: Checkout repository code
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      # Step 2: Set up SSH key for EC2 access
+      - name: Set up SSH Key
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
 
-      - name: Start Docker Compose stack
+      # Step 3: SSH into EC2, install Docker and Docker Compose (if needed), and start the Docker Compose stack
+      - name: Set up Docker and Docker Compose on EC2
         run: |
-          docker compose up -d
+          ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_PUBLIC_IP }} << 'EOF'
+            # Install Docker if not installed
+            sudo yum install -y docker || sudo apt-get install -y docker.io
+            sudo systemctl start docker
+            sudo systemctl enable docker
 
-      - name: Verify services are running
+            # Install Docker Compose if not installed
+            sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+            sudo chmod +x /usr/local/bin/docker-compose
+
+            # Run Docker Compose to start services
+            cd /home/ec2-user/my_project  # Update this path to your project folder on EC2
+            docker-compose up -d  # Start the services in the background
+
+            # Verify the services are running
+            docker ps  # List the running containers
+          EOF
+
+      # Step 4: Verify services are running (Optional check after deployment)
+      - name: Verify services running on EC2
         run: |
-          docker ps
+          ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_PUBLIC_IP }} << 'EOF'
+            docker ps  # This will show the running services (Grafana, Loki, Prometheus)
+          EOF
