--- a/loki-config.yaml
+++ b/loki-config.yaml
@@ -37,4 +37,4 @@ schema_config:
         period: 24h                  # Create a new index every 24 hours
 
 ruler:
-  alertmanager_url: http://localhost:9093    # URL of Alertmanager to send alerts to (for rule evaluation)
+  alertmanager_url: http://localhost:9093   
